# promptBasedFleetManagmentSystem

./: .gitignore  README.md  execution.md  pyproject.toml  start_backend.ps1
backend/: .env.example  config.py  log_setup.py  main.py  persistence.py  requirements.txt  session.py
backend/data/: locations.json
backend/models/: __init__.py  plan.py  robot.py
backend/prompts/: phase1_analyst.txt  phase2_dag.txt
backend/routers/: config.py  health.py  history.py  launch.py  locations.py  plan.py  status.py  system.py
backend/services/: __init__.py  dag_executor.py  dag_validator.py  gazebo.py  llm.py  process_manager.py  rate_limiter.py  ros_bridge.py  wsl.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  theme.ts
frontend/src/components/: AnimatedLogo.tsx  ErrorBanner.tsx  EventLog.tsx  LocationsEditor.tsx  RobotCard.tsx  TopBar.tsx  YardMap.tsx
frontend/src/hooks/: useHealthCheck.ts  useWebSocket.ts
frontend/src/stores/: config.ts  fleet.ts  plan.ts  ui.ts
frontend/src/types/: index.ts
frontend/src/views/: ChatView.tsx  DashboardView.tsx  HistoryView.tsx  SetupView.tsx
scripts/: launch_gazebo.sh  navigate_robot.py
